knowledge_base/knowledge/v15/capl/structured/Obsolete/fileReadArray.md
# fileReadArray

> Category: `Obsolete` | Type: `notes`

| Deprecated Function Replaced by getProfileArray |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | long fileReadArray(char section[], char entry[], char buffer[], long bufferlen, char file[]); |  |  |  |
| Function | Searches for the variable entry in the section section of the file file. Its contents are interpreted as a list of byte values. The number format is decimal or with the prefix 0x it is hexadecimal. Numbers are separated by spaces, tabs, a comma, semi-colon or slash. The buffer is filled up to a quantity of bufferlen bytes. |  |  |  |
| Parameters | section Section of file |  |  |  |
| entry Name of variable |  |  |  |  |
| buffer buffer for characters to be read |  |  |  |  |
| bufferlen Size of buffer in byte |  |  |  |  |
| filename Name of file |  |  |  |  |
| Return Values | Number of characters read. |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 3.0 | — | • | • |  |
| Example File TEST.INI:[DATA]FIELD=1,2,3,0x20,100...int len;char buf[20];len = fileReadArray("DATA", "FIELD", buf, elCount(buf), "TEST.INI");... Result: len = 5. The array buf is filled with the values 1,2,3,32,100. |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
